package com.example.event.model;

public enum EventType {
    VIEW,
    LIKE,
    SAVE
}
