package com.example.recommender.model;

public enum AlgorithmType {
    POPULARITY,
    CO_OCCURRENCE,
    ML_EMBEDDING
}
